# tcginventory

./: .gitignore  README.md  pflichtenheft.docx
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250211_01_create_cards_table.py
backend/app/: cli.py  main.py
backend/app/api/v1/: __init__.py  cards.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  card.py
backend/app/schemas/: card.py
backend/app/services/: card_importer.py
backend/app/tests/: test_card_importer.py  test_health.py
